emit Seeked on MPRIS2 interface when player really seeked

BUG: 428957